syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractDeviceComponentDescriptorOneOfProto";

import "sdc/biceps/abstractdevicecomponentdescriptor.proto";
import "sdc/biceps/clockdescriptor.proto";
import "sdc/biceps/batterydescriptor.proto";
import "sdc/biceps/channeldescriptor.proto";
import "sdc/biceps/scodescriptor.proto";
import "sdc/biceps/systemcontextdescriptor.proto";
import "sdc/biceps/abstractcomplexdevicecomponentdescriptoroneof.proto";

message AbstractDeviceComponentDescriptorOneOfMsg {
  oneof abstract_device_component_descriptor_one_of {
    AbstractDeviceComponentDescriptorMsg abstract_device_component_descriptor = 1;
    ClockDescriptorMsg clock_descriptor = 2;
    BatteryDescriptorMsg battery_descriptor = 3;
    ChannelDescriptorMsg channel_descriptor = 4;
    ScoDescriptorMsg sco_descriptor = 5;
    SystemContextDescriptorMsg system_context_descriptor = 6;
    AbstractComplexDeviceComponentDescriptorOneOfMsg abstract_complex_device_component_descriptor_one_of = 7;
  }
}
