syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "AbstractDeviceComponentStateOneOfType";

import "sdc/biceps/abstractdevicecomponentstate.proto";
import "sdc/biceps/clockstate.proto";
import "sdc/biceps/channelstate.proto";
import "sdc/biceps/systemcontextstate.proto";
import "sdc/biceps/abstractcomplexdevicecomponentstateoneof.proto";
import "sdc/biceps/batterystate.proto";
import "sdc/biceps/scostate.proto";

message AbstractDeviceComponentStateOneOf {
  oneof abstract_device_component_state_one_of {
    AbstractDeviceComponentState abstract_device_component_state = 1;
    ClockState clock_state = 2;
    ChannelState channel_state = 3;
    SystemContextState system_context_state = 4;
    AbstractComplexDeviceComponentStateOneOf abstract_complex_device_component_state_one_of = 5;
    BatteryState battery_state = 6;
    ScoState sco_state = 7;
  }
}
