syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ScoStateProto";

import "sdc/biceps/abstractdevicecomponentstate.proto";
import "sdc/biceps/extension.proto";
import "sdc/biceps/codedvalue.proto";
import "sdc/biceps/operatingmode.proto";
import "sdc/biceps/operationref.proto";

message ScoStateMsg {
  AbstractDeviceComponentStateMsg abstract_device_component_state = 1;
  message OperationGroupMsg {
    ExtensionMsg element1 = 1;
    CodedValueMsg type = 2;
    OperatingModeMsg a_operating_mode = 3;
    OperationRefMsg a_operations = 4;
  }
  repeated OperationGroupMsg operation_group = 2;
  OperationRefMsg a_invocation_requested = 3;
  OperationRefMsg a_invocation_required = 4;
}
